Class for flags added

--- a/Presentation/Nop.Web/Themes/NobleTheme/Content/css/noble-style.css
+++ b/Presentation/Nop.Web/Themes/NobleTheme/Content/css/noble-style.css
@@ -2638,3 +2638,11 @@ button {
 ul {
     list-style-image: url('/images/uploaded/GALOCHKA.png');
 }
+
+/*Флаги*/
+
+.flagsOfManufacturers
+{
+    width: 20px !important;
+    height: 12px !important;
+}
