--- a/Presentation/Nop.Web/Themes/NobleTheme/Views/Product/ProductTemplate.Grouped.cshtml
+++ b/Presentation/Nop.Web/Themes/NobleTheme/Views/Product/ProductTemplate.Grouped.cshtml
@@ -86,14 +86,14 @@
                                     <!--product reviews-->
                                     @await Html.PartialAsync("_ProductReviewOverview", Model.ProductReviewOverview)
                                     <!--compare, email a friend-->
-                                    <div class="form-group email-friend-btn">
+                                    @*<div class="form-group email-friend-btn">
                                         <div class="email-compare-button">
                                             @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.ProductDetailsInsideOverviewButtonsBefore, additionalData = Model })
                                             @await Html.PartialAsync("_CompareProductsButton", Model)
                                             @await Html.PartialAsync("_ProductEmailAFriendButton", Model)
                                             @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.ProductDetailsInsideOverviewButtonsAfter, additionalData = Model })
                                         </div>
-                                    </div>
+                                    </div>*@
                                     <!--price breaks-->
                                     @await Html.PartialAsync("_ProductTierPrices", Model.TierPrices)
                                     @await Html.PartialAsync("_ShareButton", Model)
