"product-estimate-shipping" Widget has been commented

--- a/Presentation/Nop.Web/Themes/NobleTheme/Views/Product/_ProductEstimateShipping.cshtml
+++ b/Presentation/Nop.Web/Themes/NobleTheme/Views/Product/_ProductEstimateShipping.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model.Enabled)
 {
-    <div class="product-estimate-shipping">
+    @*<div class="product-estimate-shipping">
         <a href="#estimate-shipping-popup-@Model.ProductId"
            id="open-estimate-shipping-popup-@Model.ProductId"
            class="open-estimate-shipping-popup"
@@ -11,7 +11,7 @@
         <div id="estimate-shipping-popup-@Model.ProductId" class="estimate-shipping-popup mfp-with-anim mfp-hide">
             @await Html.PartialAsync("_EstimateShippingPopUp", Model)
         </div>
-    </div>
+    </div>*@
 
     <script asp-location="Footer">
 
