"product-share-button" Widget has been deleted from product page

--- a/Presentation/Nop.Web/Themes/NobleTheme/Views/Product/_ShareButton.cshtml
+++ b/Presentation/Nop.Web/Themes/NobleTheme/Views/Product/_ShareButton.cshtml
@@ -2,7 +2,7 @@
 
 @if (!string.IsNullOrWhiteSpace(Model.PageShareCode))
 {
-    <div class="product-share-button">
+    @*<div class="product-share-button">
         @Html.Raw(Model.PageShareCode)
-    </div>
+    </div>*@
 }
