--- a/Presentation/Nop.Web/Themes/NobleTheme/Content/css/noble-style.css
+++ b/Presentation/Nop.Web/Themes/NobleTheme/Content/css/noble-style.css
@@ -8423,7 +8423,20 @@ ul {
     -moz-border-radius-topleft: 8px;
     -moz-border-radius-topright: 8px;
     -webkit-border-top-left-radius: 8px;
-    -webkit-border-top-right-radius: 8px
+    -webkit-border-top-right-radius: 8px;
+    line-height: 30px;
+    color: #3a7600;
+}
+
+h4 {
+    line-height: 1.35;
+    font-weight: 500;
+    color: #3A7600;
+    font-size: 15px;
+    text-align: center;
+    border-bottom: 1px solid #e5dcc3;
+    padding: 0 0 1px;
+    margin: 0 0 15px;
 }
 
 .col-main-akuna {
