--- a/Presentation/Nop.Web/Themes/NobleTheme/Content/css/noble-style.css
+++ b/Presentation/Nop.Web/Themes/NobleTheme/Content/css/noble-style.css
@@ -8550,4 +8550,71 @@ h4 {
     padding: 45px
 }
 
+/*  ContactUs css classes  */
+
+.col-main-akuna-contactus {
+    width: 720px;
+    float: left;
+    border: 1px solid #ccc;
+    padding: 0 0 1px;
+    text-align: left;
+    margin: 0;
+}
+
+.form-list .input-box {
+    display: block;
+    clear: both;
+    width: 260px;
+}
+
+.form-list label {
+    float: left;
+    color: #666;
+    font-weight: bold;
+    position: relative;
+    z-index: 0;
+}
+
+.form-list li {
+    margin: 0 0 8px;
+}
+
+.wide {
+    width: 670px;
+    height: 150px;
+}
+
+.form-list li.wide .input-box {
+    width: 535px;
+}
+
+.buttons-set {
+    clear: both;
+    margin: 4em 0 0;
+    padding: 8px 0 0;
+    border-top: 1px solid #e4e4e4;
+    text-align: right;
+}
+
+.fieldset {
+    padding: 22px 25px 12px 33px;
+}
+
+ul.form-list {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+.form-list li.wide .input-box {
+    width: 535px;
+}
+
+
+/* End */
+
 
