--- a/Presentation/Nop.Web/Themes/NobleTheme/Content/css/noble-style.css
+++ b/Presentation/Nop.Web/Themes/NobleTheme/Content/css/noble-style.css
@@ -8471,11 +8471,11 @@ h4 {
 
 */
 
-/* -- About company specified styles -- */
+/* -- About company specified styles -- */  
 
 .std-aboutCompany {
     width: 780px;
-    height: 1500px;
+    height: 1550px;
     color: black;
     font-size: 14px;
     font-family: "Open Sans", sans-serif;
@@ -8550,10 +8550,25 @@ h4 {
     padding: 45px
 }
 
+.page-title-akuna-aboutcompany{
+    width: 550px;
+    padding: 2px 0;
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+    background: #fcfdfd url(/images/uploaded/box-header-bg.gif) repeat-x 0 100%;
+    -moz-border-radius-topleft: 8px;
+    -moz-border-radius-topright: 8px;
+    -webkit-border-top-left-radius: 8px;
+    -webkit-border-top-right-radius: 8px;
+    line-height: 30px;
+    color: #3a7600;
+}
+
 /*  ContactUs css classes  */
 
 .col-main-akuna-contactus {
-    width: 720px;
+    width: 1100px;
+    height: 635px;
     float: left;
     border: 1px solid #ccc;
     padding: 0 0 1px;
@@ -8569,7 +8584,7 @@ h4 {
 
 .form-list label {
     float: left;
-    color: #666;
+    color: #000000;
     font-weight: bold;
     position: relative;
     z-index: 0;
@@ -8616,5 +8631,7 @@ ul.form-list {
 
 
 /* End */
+
+
 
 
