The "Bonus reward row" has been deleted from the Cart page.

--- a/Presentation/Nop.Web/Themes/NobleTheme/Views/Shared/Components/OrderTotals/Default.cshtml
+++ b/Presentation/Nop.Web/Themes/NobleTheme/Views/Shared/Components/OrderTotals/Default.cshtml
@@ -169,7 +169,7 @@
                         </span>
                     </td>
                 </tr>
-                @if (Model.WillEarnRewardPoints > 0)
+                @*@if (Model.WillEarnRewardPoints > 0)
                 {
                     <tr class="will-earn-reward-points">
                         <td class="cart-total-left">
@@ -183,7 +183,7 @@
                             </span>
                         </td>
                     </tr>
-                }
+                }*@
             </tbody>
         </table>
     </div>
