Восстановить пароль теперь зеленого цвета.

--- a/Presentation/Nop.Web/Themes/NobleTheme/Content/css/noble-style.css
+++ b/Presentation/Nop.Web/Themes/NobleTheme/Content/css/noble-style.css
@@ -3660,7 +3660,7 @@ a:focus {
 }
 
 .login-page .form-group .forgot-password a {
-    color: #333333;
+    color: forestgreen;
     text-decoration: none;
 }
 
