--- a/Presentation/Nop.Web/Themes/NobleTheme/Views/Customer/Login.cshtml
+++ b/Presentation/Nop.Web/Themes/NobleTheme/Views/Customer/Login.cshtml
@@ -112,6 +112,7 @@
                                             <div class="checkbox">
                                                 <input asp-for="RememberMe" class="checkbox" />
                                                 <label asp-for="RememberMe"></label>
+                                                &nbsp;
                                                 <span class="forgot-password">
                                                     <a asp-route="PasswordRecovery">@T("Account.Login.ForgotPassword")</a>
                                                 </span>
